--- a/site/templates/layout.tmpl
+++ b/site/templates/layout.tmpl
@@ -1,1 +1,11 @@
-{{yield}}
+<!doctype html public "i ♥ the web">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <title>{{ .Site.Title }}</title>
+  </head>
+  <body>
+  {{yield}}
+  </body>
+</html>
